--- a/my_movies/src/main/resources/application.properties
+++ b/my_movies/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-spring.data.mongodb.database=${env.MONGO_DATABASE}
-spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}
+#spring.data.mongodb.database=${env.MONGO_DATABASE}
+#spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}
+
+spring.data.mongodb.database=movie-api-db
+spring.data.mongodb.uri=mongodb+srv://lihangyi01:1qaz2wsx@movie.1nyzgag.mongodb.net
+
